--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "dotenv": "^16.4.7",
     "favicon": "^0.0.2",
     "favicons": "^7.2.0",
     "mongoose": "^8.12.2",
