--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
-    "react-routes": "^0.2.6"
+    "react-routes": "^0.2.6",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
